docs/envoy/v1.31.5/_sources/api-v3/extensions/common/ratelimit/v3/ratelimit.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/common/ratelimit/v3/ratelimit.proto:

Common rate limit components (proto)
====================================






.. _envoy_v3_api_msg_extensions.common.ratelimit.v3.RateLimitDescriptor:

extensions.common.ratelimit.v3.RateLimitDescriptor
--------------------------------------------------


:repo:`[extensions.common.ratelimit.v3.RateLimitDescriptor proto] <api/envoy/extensions/common/ratelimit/v3/ratelimit.proto#L92>`

A RateLimitDescriptor is a list of hierarchical entries that are used by the service to
determine the final rate limit key and overall allowed limit. Here are some examples of how
they might be used for the domain "envoy".

.. code-block:: cpp

  ["authenticated": "false"], ["remote_address": "10.0.0.1"]

What it does: Limits all unauthenticated traffic for the IP address 10.0.0.1. The
configuration supplies a default limit for the *remote_address* key. If there is a desire to
raise the limit for 10.0.0.1 or block it entirely it can be specified directly in the
configuration.

.. code-block:: cpp

  ["authenticated": "false"], ["path": "/foo/bar"]

What it does: Limits all unauthenticated traffic globally for a specific path (or prefix if
configured that way in the service).

.. code-block:: cpp

  ["authenticated": "false"], ["path": "/foo/bar"], ["remote_address": "10.0.0.1"]

What it does: Limits unauthenticated traffic to a specific path for a specific IP address.
Like (1) we can raise/block specific IP addresses if we want with an override configuration.

.. code-block:: cpp

  ["authenticated": "true"], ["client_id": "foo"]

What it does: Limits all traffic for an authenticated client "foo"

.. code-block:: cpp

  ["authenticated": "true"], ["client_id": "foo"], ["path": "/foo/bar"]

What it does: Limits traffic to a specific path for an authenticated client "foo"

The idea behind the API is that (1)/(2)/(3) and (4)/(5) can be sent in 1 request if desired.
This enables building complex application scenarios with a generic backend.

Optionally the descriptor can contain a limit override under a "limit" key, that specifies
the number of requests per unit to use instead of the number configured in the
rate limiting service.



.. code-block:: json
  :force:

  {
    "entries": [],
    "limit": {...}
  }

.. _envoy_v3_api_field_extensions.common.ratelimit.v3.RateLimitDescriptor.entries:


entries
  (**repeated** :ref:`extensions.common.ratelimit.v3.RateLimitDescriptor.Entry <envoy_v3_api_msg_extensions.common.ratelimit.v3.RateLimitDescriptor.Entry>`, *REQUIRED*) Descriptor entries.


.. _envoy_v3_api_field_extensions.common.ratelimit.v3.RateLimitDescriptor.limit:


limit
  (:ref:`extensions.common.ratelimit.v3.RateLimitDescriptor.RateLimitOverride <envoy_v3_api_msg_extensions.common.ratelimit.v3.RateLimitDescriptor.RateLimitOverride>`) Optional rate limit override to supply to the ratelimit service.


.. _envoy_v3_api_msg_extensions.common.ratelimit.v3.RateLimitDescriptor.Entry:

extensions.common.ratelimit.v3.RateLimitDescriptor.Entry
--------------------------------------------------------


:repo:`[extensions.common.ratelimit.v3.RateLimitDescriptor.Entry proto] <api/envoy/extensions/common/ratelimit/v3/ratelimit.proto#L96>`




.. code-block:: json
  :force:

  {
    "key": ...,
    "value": ...
  }

.. _envoy_v3_api_field_extensions.common.ratelimit.v3.RateLimitDescriptor.Entry.key:


key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Descriptor key.


.. _envoy_v3_api_field_extensions.common.ratelimit.v3.RateLimitDescriptor.Entry.value:


value
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Descriptor value.



.. _envoy_v3_api_msg_extensions.common.ratelimit.v3.RateLimitDescriptor.RateLimitOverride:

extensions.common.ratelimit.v3.RateLimitDescriptor.RateLimitOverride
--------------------------------------------------------------------


:repo:`[extensions.common.ratelimit.v3.RateLimitDescriptor.RateLimitOverride proto] <api/envoy/extensions/common/ratelimit/v3/ratelimit.proto#L110>`

Override rate limit to apply to this descriptor instead of the limit
configured in the rate limit service. See :ref:`rate limit override
<config_http_filters_rate_limit_rate_limit_override>` for more information.



.. code-block:: json
  :force:

  {
    "requests_per_unit": ...,
    "unit": ...
  }

.. _envoy_v3_api_field_extensions.common.ratelimit.v3.RateLimitDescriptor.RateLimitOverride.requests_per_unit:


requests_per_unit
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The number of requests per unit of time.


.. _envoy_v3_api_field_extensions.common.ratelimit.v3.RateLimitDescriptor.RateLimitOverride.unit:


unit
  (:ref:`type.v3.RateLimitUnit <envoy_v3_api_enum_type.v3.RateLimitUnit>`) The unit of time.




.. _envoy_v3_api_msg_extensions.common.ratelimit.v3.LocalRateLimitDescriptor:

extensions.common.ratelimit.v3.LocalRateLimitDescriptor
-------------------------------------------------------


:repo:`[extensions.common.ratelimit.v3.LocalRateLimitDescriptor proto] <api/envoy/extensions/common/ratelimit/v3/ratelimit.proto#L125>`




.. code-block:: json
  :force:

  {
    "entries": [],
    "token_bucket": {...}
  }

.. _envoy_v3_api_field_extensions.common.ratelimit.v3.LocalRateLimitDescriptor.entries:


entries
  (**repeated** :ref:`extensions.common.ratelimit.v3.RateLimitDescriptor.Entry <envoy_v3_api_msg_extensions.common.ratelimit.v3.RateLimitDescriptor.Entry>`, *REQUIRED*) Descriptor entries.


.. _envoy_v3_api_field_extensions.common.ratelimit.v3.LocalRateLimitDescriptor.token_bucket:


token_bucket
  (:ref:`type.v3.TokenBucket <envoy_v3_api_msg_type.v3.TokenBucket>`, *REQUIRED*) Token Bucket algorithm for local ratelimiting.



.. _envoy_v3_api_msg_extensions.common.ratelimit.v3.LocalClusterRateLimit:

extensions.common.ratelimit.v3.LocalClusterRateLimit
----------------------------------------------------


:repo:`[extensions.common.ratelimit.v3.LocalClusterRateLimit proto] <api/envoy/extensions/common/ratelimit/v3/ratelimit.proto#L142>`

Configuration used to enable local cluster level rate limiting where the token buckets
will be shared across all the Envoy instances in the local cluster.
A share will be calculated based on the membership of the local cluster dynamically
and the configuration. When the limiter refilling the token bucket, the share will be
applied. By default, the token bucket will be shared evenly.

See :ref:`local cluster name
<envoy_v3_api_field_config.bootstrap.v3.ClusterManager.local_cluster_name>` for more context
about local cluster.





.. _envoy_v3_api_enum_extensions.common.ratelimit.v3.XRateLimitHeadersRFCVersion:

Enum extensions.common.ratelimit.v3.XRateLimitHeadersRFCVersion
---------------------------------------------------------------


:repo:`[extensions.common.ratelimit.v3.XRateLimitHeadersRFCVersion proto] <api/envoy/extensions/common/ratelimit/v3/ratelimit.proto#L20>`

Defines the version of the standard to use for X-RateLimit headers.



.. _envoy_v3_api_enum_value_extensions.common.ratelimit.v3.XRateLimitHeadersRFCVersion.OFF:


OFF
  *(DEFAULT)* ⁣X-RateLimit headers disabled.


.. _envoy_v3_api_enum_value_extensions.common.ratelimit.v3.XRateLimitHeadersRFCVersion.DRAFT_VERSION_03:


DRAFT_VERSION_03
  ⁣Use `draft RFC Version 03 <https://tools.ietf.org/id/draft-polli-ratelimit-headers-03.html>`_ where 3 headers will be added:

  * ``X-RateLimit-Limit`` - indicates the request-quota associated to the
    client in the current time-window followed by the description of the
    quota policy. The value is returned by the maximum tokens of the token bucket.
  * ``X-RateLimit-Remaining`` - indicates the remaining requests in the
    current time-window. The value is returned by the remaining tokens in the token bucket.
  * ``X-RateLimit-Reset`` - indicates the number of seconds until reset of
    the current time-window. The value is returned by the remaining fill interval of the token bucket.



.. _envoy_v3_api_enum_extensions.common.ratelimit.v3.VhRateLimitsOptions:

Enum extensions.common.ratelimit.v3.VhRateLimitsOptions
-------------------------------------------------------


:repo:`[extensions.common.ratelimit.v3.VhRateLimitsOptions proto] <api/envoy/extensions/common/ratelimit/v3/ratelimit.proto#L36>`




.. _envoy_v3_api_enum_value_extensions.common.ratelimit.v3.VhRateLimitsOptions.OVERRIDE:


OVERRIDE
  *(DEFAULT)* ⁣Use the virtual host rate limits unless the route has a rate limit policy.


.. _envoy_v3_api_enum_value_extensions.common.ratelimit.v3.VhRateLimitsOptions.INCLUDE:


INCLUDE
  ⁣Use the virtual host rate limits even if the route has a rate limit policy.


.. _envoy_v3_api_enum_value_extensions.common.ratelimit.v3.VhRateLimitsOptions.IGNORE:


IGNORE
  ⁣Ignore the virtual host rate limits even if the route does not have a rate limit policy.


